--- a/covid-tracker/package.json
+++ b/covid-tracker/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~12.1.0",
     "@angular/platform-browser-dynamic": "~12.1.0",
     "@angular/router": "~12.1.0",
+    "bootstrap": "^5.0.2",
     "highcharts": "^9.1.2",
     "highcharts-angular": "^2.10.0",
     "rxjs": "~6.6.0",
