* Connection to local back end instead of direct connection to RapidAPI (+ removed tests), exception handling, updates of types on front end

--- a/covid-tracker-backend/src/main/resources/application.properties
+++ b/covid-tracker-backend/src/main/resources/application.properties
@@ -12,5 +12,8 @@ spring.jpa.show-sql=true
 spring.jpa.defer-datasource-initialization=true
 
 server.servlet.context-path=/api
+server.error.include-message = always
+
+cross.allowed.origins=http://localhost:4200
 
 
